small adjustments and code optimization

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-</link>
+    </link>
     <!-- STYLESHEET -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- ICON AND TITLE -->
@@ -20,35 +20,35 @@
     <title>Dropbox</title>
 </head>
 <body>
-    <!-- HEADER -->
+    <!--! HEADER -->
     <header class="mb-150">
-        <!-- NAVBAR -->
+        <!--# NAVBAR -->
         <nav class="flex">
             <div class="sidenav left flex">
                 <a href="#" class="logo flex"><img src="img/logo-small.png" alt="dropbox-logo"></a>
             <ul class="flex">
-                <li><a href="#" class="link">Perchè Dropbox</a></li>
-                <li><a href="#" class="link">Funzioni</a></li>
-                <li><a href="#" class="link">Piani e Prezzi</a></li>
+                <li><a href="#" class="nav-button">Perchè Dropbox</a></li>
+                <li><a href="#" class="nav-button">Funzioni</a></li>
+                <li><a href="#" class="nav-button">Piani e Prezzi</a></li>
             </ul>
             </div>
             <div class="sidenav right flex">
                 <ul class="flex">
-                    <li><a href="#" class="link">Supporto</a></li>
-                    <li><a href="#" class="link">Contatta l'ufficio vendite</a></li>
-                    <li><a href="#" class="link">Accedi</a></li>
-                    <li><a href="#" class="button">Inizia</a></li>
+                    <li><a href="#" class="nav-button">Supporto</a></li>
+                    <li><a href="#" class="nav-button">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#" class="nav-button">Accedi</a></li>
+                    <li><a href="#" class="btn btn-blue">Inizia</a></li>
                 </ul>
             </div>
         </nav>
-        <!-- JUMBOTRON -->
+        <!--# JUMBOTRON -->
         <div id="jumbotron">
             <div class="container big flex">
                 <h1 class="mb-50">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <div class="row flex">
                     <div class="description">
                         <p class="mb-20">Finalmente tutti i tuoi strumenti, contenuti e collaborazioni sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
-                        <a href="#" class="button mb-20">Inizia la tua prova gratuita</a>
+                        <a href="#" class="btn btn-blue mb-20">Inizia la tua prova gratuita</a>
                         <div class="mb-50">Annulla in qualsiasi momento</div>
                         <a href="#free-trial"><i class="fa-solid fa-arrow-down fa-3x"></i></a>
                     </div>
@@ -60,15 +60,15 @@
         </div>
     </header>
 
-    <!-- MAIN -->
+    <!--! MAIN -->
     <main>
-        <!-- BUSINESS PLAN SECTION -->
+        <!--# BUSINESS PLAN SECTION -->
         <section id="business-plan" class="container mb-150">
             <h2 class="mb-50">Trova il piano business che fa per te</h2>
             <div class="option-selection flex mb-50">
-                <div class="circle selected"></div>
+                <div class="circle-btn selected"></div>
                 <span>Fatturazione mensile</span>
-                <div class="circle"></div>
+                <div class="circle-btn"></div>
                 <span>Fatturazione annuale</span>
             </div>
             <div class="row flex mb-50">
@@ -88,8 +88,8 @@
                             </ul>
                         </div>
                         <div class="try-or-buy mb-50">
-                            <a href="#" class="button mb-20">Prova gratis per 30 giorni</a>
-                            <span>oppure <a href="#">acquista ora</a></span>
+                            <a href="#" class="btn btn-full-width btn-blue mb-20">Prova gratis per 30 giorni</a>
+                            <span>oppure <a href="#" class="blue-link">acquista ora</a></span>
                         </div>
                         <hr class="mb-50">
                         <div class="plan-details">
@@ -117,8 +117,8 @@
                             </ul>
                         </div>
                         <div class="try-or-buy mb-50">
-                            <a href="#" class="button mb-20">Prova gratis per 30 giorni</a>
-                            <span>oppure <a href="#">acquista ora</a></span>
+                            <a href="#" class="btn btn-full-width btn-blue mb-20">Prova gratis per 30 giorni</a>
+                            <span>oppure <a href="#" class="blue-link">acquista ora</a></span>
                         </div>
                         <hr class="mb-50">
                         <div class="plan-details">
@@ -148,8 +148,8 @@
                             </ul>
                         </div>
                         <div class="try-or-buy mb-50">
-                            <a href="#" class="button mb-20">Contattaci</a>
-                            <span>oppure <a href="#">acquista ora</a></span>
+                            <a href="#" class="btn btn-full-width btn-blue mb-20">Contattaci</a>
+                            <span>oppure <a href="#" class="blue-link">acquista ora</a></span>
                         </div>
                         <hr class="mb-50">
                         <div class="plan-details">
@@ -172,12 +172,12 @@
                         <div>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</div>
                     </div>
                     <div class="contact-us">
-                        <a href="#" class="button">Contatta l'ufficio vendite</a>
+                        <a href="#" class="btn btn-full-width btn-blue">Contatta l'ufficio vendite</a>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- PARTNER SECTION -->
+        <!--# PARTNER SECTION -->
         <section id="partner" class="container flex mb-150">
             <figure>
                 <img src="img/partner.png" alt="Partner">
@@ -185,54 +185,52 @@
             <div class="description">
                 <h3 class="mb-15">Entra in contatto con un partner Dropbox</h3>
                 <div class="mb-20">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui</div>
-                <a href="#" class="button white">Trova un partner</a>
+                <a href="#" class="btn btn-white btn-bordered">Trova un partner</a>
 
             </div>
         </section>
-        <!-- OPERATIONS SECTION -->
+        <!--# OPERATIONS SECTION -->
         <section id="operations" class="container mb-150">
             <h2 class="mb-50">Esegui più operazioni con Dropbox Business</h2>
             <div class="row flex mb-50">
-                <div class="col">
+                <div class="col mb-50">
                     <img src="img/business-feature-switching-tools.png" alt="switch tool">
                     <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
                 </div>
-                <div class="col">
+                <div class="col mb-50">
                     <img src="img/business-feature-send-files-it.png" alt="switch tool">
                     <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
                 </div>
-                <div class="col">
+                <div class="col mb-50">
                     <img src="img/business-feature-coordinate-it.png" alt="switch tool">
                     <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
                 </div>
-            </div>
-            <div class="row flex">
-                <div class="col">
+                <div class="col mb-50">
                     <img src="img/business-feature-integrations-it.png" alt="switch tool">
                     <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
                 </div>
-                <div class="col">
+                <div class="col mb-50">
                     <img src="img/business-feature-multi-device.png" alt="switch tool">
                     <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
                 </div>
-                <div class="col">
+                <div class="col mb-50">
                     <img src="img/business-feature-security.png" alt="switch tool">
                     <h3 class="mb-15">Passa di meno da uno strumento all'altro</h3>
                     <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox paper direttamente da Dropbox</p>
                 </div>
             </div>
         </section>
-        <!-- CUSTOMERS SECTION -->
+        <!--# CUSTOMERS SECTION -->
         <section id="customers" class="container mb-150">
             <h2 class="mb-50">Più di 500.000 team utilizzano <br> Dropbox Business</h2>
-            <a href="#">Scopri di più sui nostri clienti</a>
+            <a href="#" class="blue-link">Scopri di più sui nostri clienti</a>
         </section>
-        <!-- REVIEWS SECTION -->
+        <!--# REVIEWS SECTION -->
         <section id="reviews" class="reviews flex">
             <div class="reviewers flex">
                 <div class="reviewer-logo flex" id="designit">
@@ -268,18 +266,18 @@
                 </div>
             </div>
         </section>
-        <!-- FREE TRIAL SECTION -->
+        <!--# FREE TRIAL SECTION -->
         <section id="free-trial" class="mb-150">
             <div class="container flex">
                 <div class="title">
                     <h2>Porta Dropbox Business nella tua azienda.</h2>
                 </div>
                 <div class="action">
-                    <a href="#" class="button white">Inizia la tua prova gratuita</a>
+                    <a href="#" class="btn btn-white">Inizia la tua prova gratuita</a>
                 </div>
             </div>
         </section>
-        <!-- FAQ SECTION -->
+        <!--# FAQ SECTION -->
         <section id="faq" class="container">
             <h2 class="mb-50">Domande frequenti</h2>
             <hr>
@@ -303,9 +301,11 @@
             <hr>
         </section>
     </main>
-    <!-- FOOTER -->
+
+    <!--! FOOTER -->
     <footer>
         <div class="container big">
+            <!--# FOOTER TOP  -->
             <div class="footer-top flex">
                 <div class="col">
                     <h3 class="mb-20">Dropbox</h3>
@@ -358,6 +358,7 @@
                     </ul>
                 </div>
             </div>
+            <!--# FOOTER BOTTOM -->
             <div class="footer-bottom">
                 <div class="language-selection flex">
                     <i class="fa-solid fa-earth-americas"></i>
