added extra functions to reviews section

--- a/index.html
+++ b/index.html
@@ -236,33 +236,93 @@
                 <div class="reviewer-logo flex" id="designit">
                     <img src="img/designit.svg" alt="designit">
                 </div>
+                <div class="hidden" id="designit-fb">
+                    <div class="feedback">
+                        <img src="img/designit.svg" alt="designit" class="mb-100">
+                        <p class="mb-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                        <span>Morthen Thomsen, Global IT Lead</span>
+                    </div>
+                </div>
                 <div class="reviewer-logo flex" id="asu">
                     <img src="img/arizona_state_university.svg" alt="A.S.U.">
+                </div>
+                <div class="hidden" id="asu-fb">
+                    <div class="feedback">
+                        <img src="img/arizona_state_university.svg" alt="A.S.U." class="mb-100">
+                        <p class="mb-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                        <span>Morthen Thomsen, Global IT Lead</span>
+                    </div>
                 </div>
                 <div class="reviewer-logo flex" id="uf">
                     <img src="img/university_of_florida.svg" alt="U.o.F.">
                 </div>
+                <div class="hidden" id="uf-fb">
+                    <div class="feedback">
+                        <img src="img/university_of_florida.svg" alt="U.o.F." class="mb-100">
+                        <p class="mb-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                        <span>Morthen Thomsen, Global IT Lead</span>
+                    </div>
+                </div>
                 <div class="reviewer-logo flex" id="topps">
                     <img src="img/topps.svg" alt="topps">
                 </div>
+                <div class="hidden" id="topps-fb">
+                    <div class="feedback">
+                        <img src="img/topps.svg" alt="topps" class="mb-100">
+                        <p class="mb-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                        <span>Morthen Thomsen, Global IT Lead</span>
+                    </div>
+                </div>
             </div>
-            <div class="feedback">
-                <img src="img/designit.svg" alt="designit" class="mb-100">
-                <p class="mb-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
-                <span>Morthen Thomsen, Global IT Lead</span>
+            <div class="feedback flex">
+                <div class="animation">
+                    <div><i class="fa-solid fa-image fa-3x"></i></i></div>
+                    <div><i class="fa-solid fa-arrow-pointer fa-3x"></i></div>
+                </div>
+                <div class="text">
+                    <h3>Scopri cosa i nostri clienti dicono di noi</h3>
+                </div>
             </div>
             <div class="reviewers flex">
                 <div class="reviewer-logo flex" id="world-bicycle">
                     <img src="img/world_bicycle_relief.svg" alt="world-bicycle">
                 </div>
+                <div class="hidden left" id="world-bicycle-fb">
+                    <div class="feedback">
+                        <img src="img/world_bicycle_relief.svg" alt="world-bicycle" class="mb-100">
+                        <p class="mb-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                        <span>Morthen Thomsen, Global IT Lead</span>
+                    </div>
+                </div>
                 <div class="reviewer-logo flex" id="hearst">
                     <img src="img/hearst_corp.svg" alt="hearst">
+                </div>
+                <div class="hidden left" id="hearst-fb">
+                    <div class="feedback">
+                        <img src="img/hearst_corp.svg" alt="hearst" class="mb-100">
+                        <p class="mb-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                        <span>Morthen Thomsen, Global IT Lead</span>
+                    </div>
                 </div>
                 <div class="reviewer-logo flex" id="lonely-planet">
                     <img src="img/lonely_planet.svg" alt="">
                 </div>
+                <div class="hidden left" id="lonely-planet-fb">
+                    <div class="feedback">
+                        <img src="img/lonely_planet.svg" alt="lonely-planet" class="mb-100">
+                        <p class="mb-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                        <span>Morthen Thomsen, Global IT Lead</span>
+                    </div>
+                </div>
                 <div class="reviewer-logo flex" id="clear-channel">
                     <img src="img/clear_channel.svg" alt="clear-channel">
+                </div>
+                <div class="hidden left" id="clear-channel-fb">
+                    <div class="feedback">
+                        <img src="img/clear_channel.svg" alt="clear-channel" class="mb-100">
+                        <p class="mb-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+                        <span>Morthen Thomsen, Global IT Lead</span>
+                    </div>
                 </div>
             </div>
         </section>
