smooted faq animation

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </section>
         <!--# CUSTOMERS SECTION -->
         <section id="customers" class="container mb-150">
-            <h2 class="mb-50">Più di 500.000 team utilizzano <br> Dropbox Business</h2>
+            <h2 class="mb-50">Più di 500.000 team utilizzano Dropbox Business</h2>
             <a href="#" class="blue-link">Scopri di più sui nostri clienti</a>
         </section>
         <!--# REVIEWS SECTION -->
