put businessplan content in a row. Minor fixes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-    </link>
     <!-- STYLESHEET -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- ICON AND TITLE -->
@@ -74,110 +73,119 @@
                 <span>Fatturazione annuale</span>
             </div>
             <div class="row flex mb-50">
-                <div class="col gray-border">
-                    <div class="plan-type"><i class="fa-solid fa-user"></i> Singolo</div>
-                    <div class="content">
-                        <div class="plan-name mb-50">
-                            <h3 class="mb-15">Professional</h3>
-                            <div class="price"><strong>€ 12.00</strong></div>
-                            <div class="period">/mese</div>
-                        </div>
-                        <div class="plan-specifics mb-50">
-                            <ul>
-                                <li><i class="fa-solid fa-user"></i> 1 utente</li>
-                                <li><i class="fa-solid fa-folder"></i> 5 TB du spazio di archiviazione sicuro</li>
-                                <li><i class="fa-solid fa-share-nodes"></i> Funzione di produttività premium e condivizione file semplice e sicura</li>
-                            </ul>
-                        </div>
-                        <div class="try-or-buy mb-50">
-                            <a href="#" class="btn btn-full-width btn-blue mb-20">Prova gratis per 30 giorni</a>
-                            <span>oppure <a href="#" class="blue-link">acquista ora</a></span>
-                        </div>
-                        <hr class="mb-50">
-                        <div class="plan-details">
-                            <h4 class="mb-20">Punti salienti del piano</h4>
-                            <ul class="checkmark">
-                                <li><div>Invia file fino a 100 GB con Dropbox Transfert</div></li>
-                                <li><div>Cartelle offline su dispositivi mobili</div></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col gray-border">
-                    <div class="plan-type"><i class="fa-solid fa-users"></i> Team</div>
-                    <div class="content">
-                        <div class="plan-name mb-50">
-                            <h3 class="mb-15">Advanced</h3>
-                            <div class="price"><strong>€ 18.00</strong></div>
-                            <div class="period">/utente/mese</div>
-                        </div>
-                        <div class="plan-specifics mb-50">
-                            <ul>
-                                <li><i class="fa-solid fa-user"></i> 3 o più utente</li>
-                                <li><i class="fa-solid fa-folder"></i> Tutto lo spazio di cui ha bisogno il tuo team</li>
-                                <li><i class="fa-solid fa-share-nodes"></i> Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
-                            </ul>
-                        </div>
-                        <div class="try-or-buy mb-50">
-                            <a href="#" class="btn btn-full-width btn-blue mb-20">Prova gratis per 30 giorni</a>
-                            <span>oppure <a href="#" class="blue-link">acquista ora</a></span>
-                        </div>
-                        <hr class="mb-50">
-                        <div class="plan-details">
-                            <h4 class="mb-20">Punti salienti del piano</h4>
-                            <ul class="checkmark">
-                                <li><div>Nessun limite di spazio per i file</div></li>
-                                <li><div>Cartelle offline su dispositivi mobili</div></li>
-                                <li><div>Risparmio del 50% rispetto alle iscrizioni singole</div></li>
-                                <li><div>Possibilità di inserire nuovi membri del team</div></li>
-                                <li><div>Gestione dei permessi in base ai ruoli</div></li>
-                            </ul>
+                <div class="col mb-50">
+                    <div class="card gray-border">
+                        <div class="plan-type"><i class="fa-solid fa-user"></i> Singolo</div>
+                        <div class="content">
+                            <div class="plan-name mb-50">
+                                <h3 class="mb-15">Professional</h3>
+                                <div class="price"><strong>€ 12.00</strong></div>
+                                <div class="period">/mese</div>
+                            </div>
+                            <div class="plan-specifics mb-50">
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i> 1 utente</li>
+                                    <li><i class="fa-solid fa-folder"></i> 5 TB du spazio di archiviazione sicuro</li>
+                                    <li><i class="fa-solid fa-share-nodes"></i> Funzione di produttività premium e condivizione file semplice e sicura</li>
+                                </ul>
+                            </div>
+                            <div class="try-or-buy mb-50">
+                                <a href="#" class="btn btn-full-width btn-blue mb-20">Prova gratis per 30 giorni</a>
+                                <span>oppure <a href="#" class="blue-link">acquista ora</a></span>
+                            </div>
+                            <hr class="mb-50">
+                            <div class="plan-details">
+                                <h4 class="mb-20">Punti salienti del piano</h4>
+                                <ul class="checkmark">
+                                    <li><div>Invia file fino a 100 GB con Dropbox Transfert</div></li>
+                                    <li><div>Cartelle offline su dispositivi mobili</div></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col gray-border">
-                    <div class="plan-type"><i class="fa-solid fa-building"></i> Azienda</div>
-                    <div class="content">
-                        <div class="plan-name mb-50">
-                            <h3 class="mb-15">Enterprise</h3>
-                            <div class="price"><strong>Contattaci</strong></div>
+                <div class="col mb-50">
+                    <div class="card gray-border">
+                        <div class="plan-type"><i class="fa-solid fa-users"></i> Team</div>
+                        <div class="content">
+                            <div class="plan-name mb-50">
+                                <h3 class="mb-15">Advanced</h3>
+                                <div class="price"><strong>€ 18.00</strong></div>
+                                <div class="period">/utente/mese</div>
+                            </div>
+                            <div class="plan-specifics mb-50">
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i> 3 o più utente</li>
+                                    <li><i class="fa-solid fa-folder"></i> Tutto lo spazio di cui ha bisogno il tuo team</li>
+                                    <li><i class="fa-solid fa-share-nodes"></i> Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
+                                </ul>
+                            </div>
+                            <div class="try-or-buy mb-50">
+                                <a href="#" class="btn btn-full-width btn-blue mb-20">Prova gratis per 30 giorni</a>
+                                <span>oppure <a href="#" class="blue-link">acquista ora</a></span>
+                            </div>
+                            <hr class="mb-50">
+                            <div class="plan-details">
+                                <h4 class="mb-20">Punti salienti del piano</h4>
+                                <ul class="checkmark">
+                                    <li><div>Nessun limite di spazio per i file</div></li>
+                                    <li><div>Cartelle offline su dispositivi mobili</div></li>
+                                    <li><div>Risparmio del 50% rispetto alle iscrizioni singole</div></li>
+                                    <li><div>Possibilità di inserire nuovi membri del team</div></li>
+                                    <li><div>Gestione dei permessi in base ai ruoli</div></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="plan-specifics mb-50">
-                            <ul>
-                                <li><i class="fa-solid fa-user"></i> 10 o più utenti</li>
-                                <li><i class="fa-solid fa-folder"></i> Soluzione personalizzabile per la tua azienda</li>
-                                <li><i class="fa-solid fa-share-nodes"></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
-                            </ul>
+                    </div>
+                </div>
+                <div class="col mb-50">
+                    <div class="card gray-border">
+                        <div class="plan-type"><i class="fa-solid fa-building"></i> Azienda</div>
+                        <div class="content">
+                            <div class="plan-name mb-50">
+                                <h3 class="mb-15">Enterprise</h3>
+                                <div class="price"><strong>Contattaci</strong></div>
+                            </div>
+                            <div class="plan-specifics mb-50">
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i> 10 o più utenti</li>
+                                    <li><i class="fa-solid fa-folder"></i> Soluzione personalizzabile per la tua azienda</li>
+                                    <li><i class="fa-solid fa-share-nodes"></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
+                                </ul>
+                            </div>
+                            <div class="try-or-buy mb-50">
+                                <a href="#" class="btn btn-full-width btn-blue mb-20">Contattaci</a>
+                                <span>oppure <a href="#" class="blue-link">acquista ora</a></span>
+                            </div>
+                            <hr class="mb-50">
+                            <div class="plan-details">
+                                <h4 class="mb-20">Punti salienti del piano</h4>
+                                <ul class="checkmark">
+                                    <li><div>Cartelle offline su dispositivi mobili</div></li>
+                                    <li><div>Servizio assistenza 24/h</div></li>
+                                    <li><div>Possibilità di personalizzazione totale</div></li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="try-or-buy mb-50">
-                            <a href="#" class="btn btn-full-width btn-blue mb-20">Contattaci</a>
-                            <span>oppure <a href="#" class="blue-link">acquista ora</a></span>
-                        </div>
-                        <hr class="mb-50">
-                        <div class="plan-details">
-                            <h4 class="mb-20">Punti salienti del piano</h4>
-                            <ul class="checkmark">
-                                <li><div>Cartelle offline su dispositivi mobili</div></li>
-                                <li><div>Servizio assistenza 24/h</div></li>
-                                <li><div>Possibilità di personalizzazione totale</div></li>
-                            </ul>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card gray-border">
+                        <div class="plan-type"><i class="fa-solid fa-building"></i> Team</div>
+                        <div class="content bottom flex">
+                            <div class="plan-name">
+                                <h3 class="mb-15">Enterprise</h3>
+                                <div class="price mb-50"><strong>Contatta l'ufficio vendite per i prezzi</strong></div>
+                                <div>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</div>
+                            </div>
+                            <div class="contact-us">
+                                <a href="#" class="btn btn-full-width btn-blue">Contatta l'ufficio vendite</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row gray-border">
-                <div class="plan-type"><i class="fa-solid fa-building"></i> Team</div>
-                <div class="content bottom flex">
-                    <div class="plan-name">
-                        <h3 class="mb-15">Enterprise</h3>
-                        <div class="price mb-50"><strong>Contatta l'ufficio vendite per i prezzi</strong></div>
-                        <div>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</div>
-                    </div>
-                    <div class="contact-us">
-                        <a href="#" class="btn btn-full-width btn-blue">Contatta l'ufficio vendite</a>
-                    </div>
-                </div>
-            </div>
+           
         </section>
 
         <!--# PARTNER SECTION -->
@@ -282,7 +290,7 @@
             </div>
             <div class="feedback flex">
                 <div class="animation">
-                    <div><i class="fa-solid fa-image fa-3x"></i></i></div>
+                    <div><i class="fa-solid fa-image fa-3x"></i></div>
                     <div><i class="fa-solid fa-arrow-pointer fa-3x"></i></div>
                 </div>
                 <div class="text">
@@ -433,7 +441,7 @@
                 <div class="language-selection flex">
                     <i class="fa-solid fa-earth-americas"></i>
                     <select name="language" id="language">
-                        <option value="Italian">Italiano</i></option>
+                        <option value="Italian">Italiano</option>
                     </select>
                     <i class="fa-solid fa-caret-up fa-xs"></i>
                 </div>
